tests/sources/invalid/arrays/array_size_literal_suffix.fire
// A sized-array declaration whose bracketed size is an integer literal with
// a numeric-type suffix (e.g. `5i8`) is not a bare integer and is rejected
// when the parser tries to convert it to an array size.
fn main() -> int32 {
    arr: int32[5i8];  //~ ERROR FS-PARSE-0010 @16
    return 0;
}
